--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,8 @@
   to = "/index.html"
   status = 404
 
+[[redirects]]
+  from = "/talks/smashing"
+  to = "https://speakerdeck.com/philhawksworth/next-wave-infrastructure"
+  status = 302
+
